--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
  <meta http-equiv="X-UA-Compatible" content="IE=edge">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+ <script src="./index.js" defer></script>
  <link rel="stylesheet" href="/index.css">
  <title>Calculator</title>
 </head>
 <body>
  <div class="container">
-  <input type="text" class="display" placeholder=" Do your Calculator here😂" id="display" readonly>
-  <div class="press">
+  <input type="text" class="display "  id="result" placeholder="Rate and use my calculator please🥰" readonly>
+  <div class="buttons">
   <button class="btn btn-danger">C</button>
 <button class="btn btn-warning">/</button>
 <button class="btn btn-primary">*</button>
@@ -32,8 +33,6 @@
   </div>
 
  </div>
- <footer>
-
- </footer>
+ 
 </body>
 </html>
